// Copyright 2025 Cofide Limited.
// SPDX-License-Identifier: Apache-2.0

syntax = "proto3";

package proto.connect.organization_service.v1alpha1;

import "proto/organization/v1alpha1/organization.proto";

option go_package = "github.com/cofide/cofide-api-sdk/gen/go/proto/connect/organization_service/v1alpha1";

service OrganizationService {
  rpc GetOrganization(GetOrganizationRequest) returns (GetOrganizationResponse);
  rpc ListOrganizations(ListOrganizationsRequest) returns (ListOrganizationsResponse);
}

message GetOrganizationRequest {
  optional string org_id = 1;
}

message GetOrganizationResponse {
  optional proto.organization.v1alpha1.Organization organization = 1;
}

message ListOrganizationsRequest {
  message Filter {
    optional string name = 1;
  }
  optional Filter filter = 1;
}

message ListOrganizationsResponse {
  repeated proto.organization.v1alpha1.Organization organizations = 1;
}
